# piighost-proofreader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.backend  Dockerfile.piighost-api  README.md  app.py  compose.infra.yml  compose.yaml  pipeline.py  pipeline.toml  pyproject.toml
docs/blog/: 2026-05-26-cv-llm-sans-nom-fr.md  2026-05-26-cv-llm-without-pii-en.md
docs/superpowers/plans/: 2026-05-20-piighost-proofreader.md  2026-05-21-fastapi-backend.md  2026-05-21-frontend-tailgrids-react.md  2026-05-21-frontend-tailgrids.md  (+3 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: appState.test.ts  emptyState.i18n.test.tsx  i18n.test.tsx  languageSwitcher.test.tsx  mistakesStore.test.ts  overrides.test.ts  parseSSE.test.ts  scaling.test.ts  upload.test.ts
proofreader/: anonymize.py  highlight.py  language.py  llm.py  locator.py  models.py  pdf_extraction.py  pdf_render.py
proofreader/api/: overrides.py  pipeline.py  routes.py  settings.py
samples/: build_samples.py
src/proofreader/: anonymize.py  models.py  pdf_render.py
tests/: conftest.py  test_anonymize.py  test_highlight.py  test_language.py  test_llm.py  test_locator.py  test_models.py  test_pdf_extraction.py  test_pdf_render.py
tests/api/: conftest.py  test_anonymize_client.py  test_detect_pii.py  test_errors.py  test_llm_stream.py  test_locator_substring_all.py  test_overrides.py  test_pipeline.py  test_routes.py  test_routes_live.py  test_sse.py
(+55 files in other folders)
