[project]
name = "piighost-proofreader"
version = "0.1.0"
description = "LLM-powered CV proofreader with piighost anonymization."
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.46",
    "opendataloader-pdf>=0.5",
    "pymupdf>=1.24",
    "pillow>=10.4",
    "lingua-language-detector>=2.0",
    "httpx>=0.27",
    "langchain>=1.2",
    "langchain-litellm>=0.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "instructor>=1.6",
    "litellm>=1.50",
    "python-multipart>=0.0.9",
    "anyio>=4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "pyrefly>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
